--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Учебный проект «Менеджер задач» от HTML Academy",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "build": "webpack",
+    "build-dev": "webpack",
+    "build": "webpack --config webpack.prod.config.js",
     "eslint": "eslint src/**/*.js",
     "test": "npm run eslint"
   },
