--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "3.2.0",
     "eslint": "^6.1.0",
     "eslint-config-htmlacademy": "^0.5.2",
+    "moment-locales-webpack-plugin": "^1.1.0",
     "style-loader": "1.0.0",
     "webpack": "4.39.1",
     "webpack-cli": "3.3.6",
@@ -23,6 +24,7 @@
     "node": "10"
   },
   "dependencies": {
-    "flatpickr": "4.6.2"
+    "flatpickr": "4.6.2",
+    "moment": "^2.24.0"
   }
 }
